joos1syntax/test/pos/SimpleFor4.java
public class SimpleFor4 {
  public SimpleFor4() {
    for (int x;; x=42);
  }
}
