joos1syntax/test/neg/BadUnaryExp0.java
public class BadUnaryExp0 {
  public BadUnaryExp0() {
    boolean x = (42;
  }
}
